// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar computed Date range (selected) dayNames 1`] = `
Array [
  "Sun",
  "Mon",
  "Tue",
  "Wed",
  "Thu",
  "Fri",
  "Sat",
]
`;

exports[`Calendar computed Date range (selected) days 1`] = `
Array [
  Object {
    "date": 2018-10-28T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 28,
  },
  Object {
    "date": 2018-10-29T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 29,
  },
  Object {
    "date": 2018-10-30T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 30,
  },
  Object {
    "date": 2018-10-31T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 31,
  },
  Object {
    "date": 2018-11-01T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 1,
  },
  Object {
    "date": 2018-11-02T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 2,
  },
  Object {
    "date": 2018-11-03T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 3,
  },
  Object {
    "date": 2018-11-04T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 4,
  },
  Object {
    "date": 2018-11-05T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 5,
  },
  Object {
    "date": 2018-11-06T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 6,
  },
  Object {
    "date": 2018-11-07T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 7,
  },
  Object {
    "date": 2018-11-08T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 8,
  },
  Object {
    "date": 2018-11-09T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 9,
  },
  Object {
    "date": 2018-11-10T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 10,
  },
  Object {
    "date": 2018-11-11T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 11,
  },
  Object {
    "date": 2018-11-12T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 12,
  },
  Object {
    "date": 2018-11-13T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 13,
  },
  Object {
    "date": 2018-11-14T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 14,
  },
  Object {
    "date": 2018-11-15T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 15,
  },
  Object {
    "date": 2018-11-16T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 16,
  },
  Object {
    "date": 2018-11-17T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 17,
  },
  Object {
    "date": 2018-11-18T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 18,
  },
  Object {
    "date": 2018-11-19T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 19,
  },
  Object {
    "date": 2018-11-20T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 20,
  },
  Object {
    "date": 2018-11-21T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 21,
  },
  Object {
    "date": 2018-11-22T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 22,
  },
  Object {
    "date": 2018-11-23T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 23,
  },
  Object {
    "date": 2018-11-24T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 24,
  },
  Object {
    "date": 2018-11-25T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 25,
  },
  Object {
    "date": 2018-11-26T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 26,
  },
  Object {
    "date": 2018-11-27T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 27,
  },
  Object {
    "date": 2018-11-28T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 28,
  },
  Object {
    "date": 2018-11-29T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 29,
  },
  Object {
    "date": 2018-11-30T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 30,
  },
  Object {
    "date": 2018-12-01T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 1,
  },
  Object {
    "date": 2018-12-02T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 2,
  },
  Object {
    "date": 2018-12-03T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 3,
  },
  Object {
    "date": 2018-12-04T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 4,
  },
  Object {
    "date": 2018-12-05T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 5,
  },
  Object {
    "date": 2018-12-06T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 6,
  },
  Object {
    "date": 2018-12-07T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 7,
  },
  Object {
    "date": 2018-12-08T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 8,
  },
  Object {
    "date": 2018-12-09T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 9,
  },
  Object {
    "date": 2018-12-10T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 10,
  },
  Object {
    "date": 2018-12-11T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 11,
  },
  Object {
    "date": 2018-12-12T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 12,
  },
]
`;

exports[`Calendar computed Date range (selected) weeks 1`] = `
Array [
  Array [
    Object {
      "date": 2018-10-28T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 28,
    },
    Object {
      "date": 2018-10-29T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 29,
    },
    Object {
      "date": 2018-10-30T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 30,
    },
    Object {
      "date": 2018-10-31T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 31,
    },
    Object {
      "date": 2018-11-01T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 1,
    },
    Object {
      "date": 2018-11-02T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 2,
    },
    Object {
      "date": 2018-11-03T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 3,
    },
  ],
  Array [
    Object {
      "date": 2018-11-04T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 4,
    },
    Object {
      "date": 2018-11-05T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 5,
    },
    Object {
      "date": 2018-11-06T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 6,
    },
    Object {
      "date": 2018-11-07T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 7,
    },
    Object {
      "date": 2018-11-08T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 8,
    },
    Object {
      "date": 2018-11-09T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 9,
    },
    Object {
      "date": 2018-11-10T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 10,
    },
  ],
  Array [
    Object {
      "date": 2018-11-11T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 11,
    },
    Object {
      "date": 2018-11-12T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 12,
    },
    Object {
      "date": 2018-11-13T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 13,
    },
    Object {
      "date": 2018-11-14T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 14,
    },
    Object {
      "date": 2018-11-15T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 15,
    },
    Object {
      "date": 2018-11-16T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 16,
    },
    Object {
      "date": 2018-11-17T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 17,
    },
  ],
  Array [
    Object {
      "date": 2018-11-18T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 18,
    },
    Object {
      "date": 2018-11-19T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 19,
    },
    Object {
      "date": 2018-11-20T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 20,
    },
    Object {
      "date": 2018-11-21T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 21,
    },
    Object {
      "date": 2018-11-22T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 22,
    },
    Object {
      "date": 2018-11-23T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 23,
    },
    Object {
      "date": 2018-11-24T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 24,
    },
  ],
  Array [
    Object {
      "date": 2018-11-25T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 25,
    },
    Object {
      "date": 2018-11-26T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 26,
    },
    Object {
      "date": 2018-11-27T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 27,
    },
    Object {
      "date": 2018-11-28T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 28,
    },
    Object {
      "date": 2018-11-29T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 29,
    },
    Object {
      "date": 2018-11-30T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 30,
    },
    Object {
      "date": 2018-12-01T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 1,
    },
  ],
  Array [
    Object {
      "date": 2018-12-02T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 2,
    },
    Object {
      "date": 2018-12-03T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 3,
    },
    Object {
      "date": 2018-12-04T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 4,
    },
    Object {
      "date": 2018-12-05T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 5,
    },
    Object {
      "date": 2018-12-06T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 6,
    },
    Object {
      "date": 2018-12-07T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 7,
    },
    Object {
      "date": 2018-12-08T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 8,
    },
  ],
]
`;

exports[`Calendar computed Date range dayNames 1`] = `
Array [
  "Sun",
  "Mon",
  "Tue",
  "Wed",
  "Thu",
  "Fri",
  "Sat",
]
`;

exports[`Calendar computed Date range days 1`] = `
Array [
  Object {
    "date": 2018-10-28T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 28,
  },
  Object {
    "date": 2018-10-29T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 29,
  },
  Object {
    "date": 2018-10-30T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 30,
  },
  Object {
    "date": 2018-10-31T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 31,
  },
  Object {
    "date": 2018-11-01T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 1,
  },
  Object {
    "date": 2018-11-02T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 2,
  },
  Object {
    "date": 2018-11-03T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 3,
  },
  Object {
    "date": 2018-11-04T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 4,
  },
  Object {
    "date": 2018-11-05T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 5,
  },
  Object {
    "date": 2018-11-06T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 6,
  },
  Object {
    "date": 2018-11-07T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 7,
  },
  Object {
    "date": 2018-11-08T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 8,
  },
  Object {
    "date": 2018-11-09T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 9,
  },
  Object {
    "date": 2018-11-10T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 10,
  },
  Object {
    "date": 2018-11-11T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 11,
  },
  Object {
    "date": 2018-11-12T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 12,
  },
  Object {
    "date": 2018-11-13T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 13,
  },
  Object {
    "date": 2018-11-14T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 14,
  },
  Object {
    "date": 2018-11-15T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 15,
  },
  Object {
    "date": 2018-11-16T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 16,
  },
  Object {
    "date": 2018-11-17T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 17,
  },
  Object {
    "date": 2018-11-18T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 18,
  },
  Object {
    "date": 2018-11-19T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 19,
  },
  Object {
    "date": 2018-11-20T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 20,
  },
  Object {
    "date": 2018-11-21T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 21,
  },
  Object {
    "date": 2018-11-22T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 22,
  },
  Object {
    "date": 2018-11-23T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 23,
  },
  Object {
    "date": 2018-11-24T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 24,
  },
  Object {
    "date": 2018-11-25T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 25,
  },
  Object {
    "date": 2018-11-26T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 26,
  },
  Object {
    "date": 2018-11-27T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 27,
  },
  Object {
    "date": 2018-11-28T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 28,
  },
  Object {
    "date": 2018-11-29T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 29,
  },
  Object {
    "date": 2018-11-30T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 30,
  },
  Object {
    "date": 2018-12-01T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 1,
  },
  Object {
    "date": 2018-12-02T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 2,
  },
  Object {
    "date": 2018-12-03T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 3,
  },
  Object {
    "date": 2018-12-04T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 4,
  },
  Object {
    "date": 2018-12-05T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 5,
  },
  Object {
    "date": 2018-12-06T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 6,
  },
  Object {
    "date": 2018-12-07T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 7,
  },
  Object {
    "date": 2018-12-08T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 8,
  },
  Object {
    "date": 2018-12-09T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 9,
  },
  Object {
    "date": 2018-12-10T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 10,
  },
  Object {
    "date": 2018-12-11T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 11,
  },
  Object {
    "date": 2018-12-12T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 12,
  },
]
`;

exports[`Calendar computed Date range weeks 1`] = `
Array [
  Array [
    Object {
      "date": 2018-10-28T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 28,
    },
    Object {
      "date": 2018-10-29T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 29,
    },
    Object {
      "date": 2018-10-30T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 30,
    },
    Object {
      "date": 2018-10-31T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 31,
    },
    Object {
      "date": 2018-11-01T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 1,
    },
    Object {
      "date": 2018-11-02T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 2,
    },
    Object {
      "date": 2018-11-03T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 3,
    },
  ],
  Array [
    Object {
      "date": 2018-11-04T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 4,
    },
    Object {
      "date": 2018-11-05T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 5,
    },
    Object {
      "date": 2018-11-06T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 6,
    },
    Object {
      "date": 2018-11-07T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 7,
    },
    Object {
      "date": 2018-11-08T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 8,
    },
    Object {
      "date": 2018-11-09T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 9,
    },
    Object {
      "date": 2018-11-10T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 10,
    },
  ],
  Array [
    Object {
      "date": 2018-11-11T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 11,
    },
    Object {
      "date": 2018-11-12T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 12,
    },
    Object {
      "date": 2018-11-13T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 13,
    },
    Object {
      "date": 2018-11-14T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 14,
    },
    Object {
      "date": 2018-11-15T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 15,
    },
    Object {
      "date": 2018-11-16T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 16,
    },
    Object {
      "date": 2018-11-17T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 17,
    },
  ],
  Array [
    Object {
      "date": 2018-11-18T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 18,
    },
    Object {
      "date": 2018-11-19T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 19,
    },
    Object {
      "date": 2018-11-20T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 20,
    },
    Object {
      "date": 2018-11-21T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 21,
    },
    Object {
      "date": 2018-11-22T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 22,
    },
    Object {
      "date": 2018-11-23T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 23,
    },
    Object {
      "date": 2018-11-24T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 24,
    },
  ],
  Array [
    Object {
      "date": 2018-11-25T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 25,
    },
    Object {
      "date": 2018-11-26T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 26,
    },
    Object {
      "date": 2018-11-27T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 27,
    },
    Object {
      "date": 2018-11-28T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 28,
    },
    Object {
      "date": 2018-11-29T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 29,
    },
    Object {
      "date": 2018-11-30T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 30,
    },
    Object {
      "date": 2018-12-01T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 1,
    },
  ],
  Array [
    Object {
      "date": 2018-12-02T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 2,
    },
    Object {
      "date": 2018-12-03T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 3,
    },
    Object {
      "date": 2018-12-04T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 4,
    },
    Object {
      "date": 2018-12-05T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 5,
    },
    Object {
      "date": 2018-12-06T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 6,
    },
    Object {
      "date": 2018-12-07T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 7,
    },
    Object {
      "date": 2018-12-08T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 8,
    },
  ],
]
`;

exports[`Calendar computed Single day dayNames 1`] = `
Array [
  "Sun",
  "Mon",
  "Tue",
  "Wed",
  "Thu",
  "Fri",
  "Sat",
]
`;

exports[`Calendar computed Single day days 1`] = `
Array [
  Object {
    "date": 2018-10-28T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 28,
  },
  Object {
    "date": 2018-10-29T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 29,
  },
  Object {
    "date": 2018-10-30T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 30,
  },
  Object {
    "date": 2018-10-31T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 31,
  },
  Object {
    "date": 2018-11-01T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 1,
  },
  Object {
    "date": 2018-11-02T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 2,
  },
  Object {
    "date": 2018-11-03T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 3,
  },
  Object {
    "date": 2018-11-04T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 4,
  },
  Object {
    "date": 2018-11-05T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 5,
  },
  Object {
    "date": 2018-11-06T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 6,
  },
  Object {
    "date": 2018-11-07T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 7,
  },
  Object {
    "date": 2018-11-08T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 8,
  },
  Object {
    "date": 2018-11-09T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 9,
  },
  Object {
    "date": 2018-11-10T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 10,
  },
  Object {
    "date": 2018-11-11T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 11,
  },
  Object {
    "date": 2018-11-12T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 12,
  },
  Object {
    "date": 2018-11-13T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 13,
  },
  Object {
    "date": 2018-11-14T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 14,
  },
  Object {
    "date": 2018-11-15T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 15,
  },
  Object {
    "date": 2018-11-16T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 16,
  },
  Object {
    "date": 2018-11-17T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 17,
  },
  Object {
    "date": 2018-11-18T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 18,
  },
  Object {
    "date": 2018-11-19T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 19,
  },
  Object {
    "date": 2018-11-20T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 20,
  },
  Object {
    "date": 2018-11-21T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 21,
  },
  Object {
    "date": 2018-11-22T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 22,
  },
  Object {
    "date": 2018-11-23T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 23,
  },
  Object {
    "date": 2018-11-24T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 24,
  },
  Object {
    "date": 2018-11-25T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 25,
  },
  Object {
    "date": 2018-11-26T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 26,
  },
  Object {
    "date": 2018-11-27T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 27,
  },
  Object {
    "date": 2018-11-28T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 28,
  },
  Object {
    "date": 2018-11-29T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 29,
  },
  Object {
    "date": 2018-11-30T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 30,
  },
  Object {
    "date": 2018-12-01T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 1,
  },
  Object {
    "date": 2018-12-02T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 2,
  },
  Object {
    "date": 2018-12-03T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 3,
  },
  Object {
    "date": 2018-12-04T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 4,
  },
  Object {
    "date": 2018-12-05T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 5,
  },
  Object {
    "date": 2018-12-06T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 6,
  },
  Object {
    "date": 2018-12-07T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 7,
  },
  Object {
    "date": 2018-12-08T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 8,
  },
  Object {
    "date": 2018-12-09T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 9,
  },
  Object {
    "date": 2018-12-10T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 10,
  },
  Object {
    "date": 2018-12-11T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 11,
  },
  Object {
    "date": 2018-12-12T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 12,
  },
]
`;

exports[`Calendar computed Single day weeks 1`] = `
Array [
  Array [
    Object {
      "date": 2018-10-28T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 28,
    },
    Object {
      "date": 2018-10-29T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 29,
    },
    Object {
      "date": 2018-10-30T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 30,
    },
    Object {
      "date": 2018-10-31T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 31,
    },
    Object {
      "date": 2018-11-01T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 1,
    },
    Object {
      "date": 2018-11-02T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 2,
    },
    Object {
      "date": 2018-11-03T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 3,
    },
  ],
  Array [
    Object {
      "date": 2018-11-04T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 4,
    },
    Object {
      "date": 2018-11-05T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 5,
    },
    Object {
      "date": 2018-11-06T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 6,
    },
    Object {
      "date": 2018-11-07T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 7,
    },
    Object {
      "date": 2018-11-08T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 8,
    },
    Object {
      "date": 2018-11-09T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 9,
    },
    Object {
      "date": 2018-11-10T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 10,
    },
  ],
  Array [
    Object {
      "date": 2018-11-11T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 11,
    },
    Object {
      "date": 2018-11-12T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 12,
    },
    Object {
      "date": 2018-11-13T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 13,
    },
    Object {
      "date": 2018-11-14T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 14,
    },
    Object {
      "date": 2018-11-15T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 15,
    },
    Object {
      "date": 2018-11-16T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 16,
    },
    Object {
      "date": 2018-11-17T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 17,
    },
  ],
  Array [
    Object {
      "date": 2018-11-18T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 18,
    },
    Object {
      "date": 2018-11-19T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 19,
    },
    Object {
      "date": 2018-11-20T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 20,
    },
    Object {
      "date": 2018-11-21T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 21,
    },
    Object {
      "date": 2018-11-22T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 22,
    },
    Object {
      "date": 2018-11-23T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 23,
    },
    Object {
      "date": 2018-11-24T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 24,
    },
  ],
  Array [
    Object {
      "date": 2018-11-25T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 25,
    },
    Object {
      "date": 2018-11-26T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 26,
    },
    Object {
      "date": 2018-11-27T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 27,
    },
    Object {
      "date": 2018-11-28T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 28,
    },
    Object {
      "date": 2018-11-29T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 29,
    },
    Object {
      "date": 2018-11-30T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 30,
    },
    Object {
      "date": 2018-12-01T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 1,
    },
  ],
  Array [
    Object {
      "date": 2018-12-02T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 2,
    },
    Object {
      "date": 2018-12-03T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 3,
    },
    Object {
      "date": 2018-12-04T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 4,
    },
    Object {
      "date": 2018-12-05T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 5,
    },
    Object {
      "date": 2018-12-06T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 6,
    },
    Object {
      "date": 2018-12-07T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 7,
    },
    Object {
      "date": 2018-12-08T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 8,
    },
  ],
]
`;
